@@ -34,6 +34,9 @@ from 2.5.3 to 2.5.4
   storage size of saved files (class list_entry)
 - adding new method in libdar API to translate archive offset to file
   offset (class archive)
+- reporting a specific error message when filename returned by the system
+  has the maximum length supported by the system itself, assuming
+  filename has been truncated
 
 from 2.5.2 to 2.5.3
 - Fixing a 2.5.x build issue met when a 2.4.x libdar library is already
